# playground

./: .gitignore  CMakeLists.txt  README.md
src/bad_reference/: bind_to_null_ptr_constant.cpp  bind_to_temp_of_wrong_type.cpp  nonconst_lvalue_ref_to_value.cpp  ref_to_ref.cpp
src/good_reference/: glvalues.cpp  not_a_pointer.cpp  pointer_vs_references.cpp  rvalues.cpp  same_object  same_object.cpp  test.cpp
